--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,15 @@
   <link rel="icon" href="/img/icon.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+
 <body>
   <div style="background:transparent !important" class="jumbotron text-center">
     <h1>Push Notification Demo</h1>
   </div>
   <div class="container-fluid">
     <div class="row justify-content-md-center">
-      <button type="button" id="notificacao" class="btn btn-primary" onclick="requestPermission();">Habilitar Notificações</button>
+      <button type="button" id="notificacao" class="btn btn-primary" onclick="requestPermission();">Habilitar
+        Notificações</button>
     </div>
     <div class="row justify-content-md-center mt-3">
       <div class="col col-lg-4">
@@ -39,15 +42,21 @@
       </div>
     </div>
   </div>
+
   <script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.7.1/firebase-app.js"></script>
-  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.7.1/firebase-messaging.js"></script>
-  <script type="text/javascript" src="/src/init.js"></script>
-  <script type="text/javascript" src="/src/notification.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/7.14.0/firebase-messaging.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-analytics.js"></script>
+  <script type="text/javascript" src="/src/init.js"></script> 
+  <script type="text/javascript" src="/src/notification.js"></script> 
+ 
   <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", function() {
+
+      // console.log(window.Notification)
       if (!("Notification" in window)) {
         alert("Este navegador não suporta notificações de Desktop!");
       }
@@ -59,4 +68,5 @@
     });
   </script>
 </body>
+
 </html>
